# numerical-thesis

./: .env.example  .gitignore  README.md  plan.md
autoresearch/: advanced_batch_results.csv  batch_results.csv  extended_results.csv  prepare.py  program.md  pyproject.toml  results.tsv  round2_results.csv  run_extended.py  run_round2.py  train.py
autoresearch/feedback/: iteration_003.json  iteration_004.json  iteration_005.json  latest.json
thesis_portfolio_opt/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_all.py  run_pipeline.py
thesis_portfolio_opt/.github/workflows/: research.yml  test.yml
thesis_portfolio_opt/app/: dashboard.py
thesis_portfolio_opt/deliverables/: Chapter4_Results.tex  Data_Dictionary.docx  Methodology_PersonE.docx  Thesis_Results.xlsx  table_autoresearch_top5.tex  table_factor_attribution.tex  table_final_comparison.tex  table_integrated_comparison.tex  table_per_asset.tex  table_significance.tex  table_tc_sensitivity.tex  table_walkforward_detailed.tex
thesis_portfolio_opt/notebooks/: 01_eda_visualization.ipynb  02_model_experimentation.ipynb  03_optimization_analysis.ipynb  04_thesis_figures.ipynb
thesis_portfolio_opt/research/: advanced_wf_analysis.py  experiment.py  factor_attribution.py  feature_tc_robustness.py  heatmap_and_riskparity.py  program.md  results.tsv  run_walkforward_top5.py  statistical_significance.py  turnover_constraint.py
thesis_portfolio_opt/src/: __init__.py  config.py  utils.py
thesis_portfolio_opt/tests/: conftest.py  test_data_integrity.py  test_optimization.py  test_research.py
(+60 files in other folders)
