[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous portfolio research framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=1.25.0,<3.0",
    "pandas>=2.1.0,<3.0",
    "pyarrow>=14.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0,<2.0",
    "lightgbm>=4.1.0,<5.0",
    "xgboost>=2.0.0,<3.0",
    "fredapi>=0.5.1",
    "yfinance>=0.2.31",
    "cvxpy>=1.4.0,<2.0",
    "scipy>=1.11.0,<2.0",
]
